# info-archive

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Cross-Compilation.cmake  IALauncher.py  IDCartes2009.h  IDCartes2010.h  LICENSE  README.md  SConstruct  TODO.txt  Todo.txt  bootstrap.sh  build.sh  build_arm.sh  checklist.md  doxyconfig  format.sh  info.config  info.files  info.includes  info_funto.workspace  init.sh  install.sh  make_fileslist.sh  pull.sh  robot_builder.glade  robot_builder.py  scons_help.py  scons_tools.py  send_file_to_raspi.sh  send_file_to_rpi.sh  simu_launcher.sh  ssh_into_rpi.sh
commun/: CMakeLists.txt  Clock.h  Commun.h  Constantes.h  ConstantesCommunes.cpp  ConstantesCommunes.h  Cpp11Compat.h  CppUtils.h  Enum.h  Erreur.h  IConstantes.h  ResultatAction.h  SConstruct  Trame.cpp  Trame.h  TrameSimu.cpp  TrameSimu.h  Units.h  Utils.h
commun/2009/: IDCartes2009.h
commun/2010/: Constante2010.h  Constantes2010.h  IDCartes2010.h
commun/2011/: ConstantesCommunes2011.h
commun/2011/atlas2011/: ConstantesAtlas2011.h  IDCartesAtlas2011.h
commun/2011/titan/: Constantes2011.h  IDCartes2011.h
commun/2011/titan2011/: ConstantesTitan2011.h  IDCartesTitan2011.h
commun/2012/: Constantes2012.h  IDCartes2012.h
commun/2013/: ConstantesCommunes2013.h
commun/2013/chronos2013/: ConstantesChronos2013.h  IDCartesChronos2013.h
commun/2013/pan2013/: Constantes2013.h  IDCartes2013.h
commun/2014/: ConstantesCommunes2014.cpp  ConstantesCommunes2014.h  Feu.cpp  Feu.h  SConstruct
commun/2014/Lucy/: Constantes2014.cpp  Constantes2014.h  IDCartes2014.h
commun/2014/Robot_grand/: Constantes2014.cpp  Constantes2014.h  IDCartes2014.h
commun/2014/Robot_petit/: Constantes2014.cpp  Constantes2014.h  IDCartes2014.h
commun/2014/Toumai/: Constantes2014.cpp  Constantes2014.h
commun/2015/: ConstantesCommunes2015.cpp  ConstantesCommunes2015.h  Feu.cpp  Feu.h  SConstruct
commun/2015/Lucy/: Constantes2015.cpp  Constantes2015.h
commun/2015/RobotPrincipal/: Constantes2015.cpp  Constantes2015.h
commun/2015/RobotSecondaire/: Constantes2015.cpp  Constantes2015.h
commun/2015/Toumai/: Constantes2015.cpp  Constantes2015.h
commun/Action/: Action.h
commun/Clock/: Clock.cpp  Clock.h  getMSTime.h
commun/Enum/: Enum.h  Enum.hpp
commun/GLFW/: CMakeLists.txt  SConstruct
commun/GLFW/src/: SConstruct  window.c
commun/MathToolbox/: MathToolbox.cpp  MathToolbox.h  MathUtilities.cpp  MathUtilities.h  Matrix3.h  Matrix3.hpp  Matrix4.h  Matrix4.hpp  Repere.cpp  Repere.h  SConstruct  Transform.h  Transform.hpp  Vector.h  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp  Vector4.h  Vector4.hpp  main.cpp
commun/RobotPrincipal/: Constantes.cpp  Constantes.h
commun/Units/: Angle.h  Distance.h  Duree.h  Masse.h  Surface.h  Unit.h  Units.cpp  Units.h  VitesseAngulaire.h  VitesseLineaire.h
commun/communication/: Communicateur.cpp  CommunicateurSerie.h
commun/debug/: CGTKwin.cpp  CGTKwin.h
commun/getopt/: getopt.cpp  getopt.h
commun/log/: Log.cpp  Log.h  LogHTML.cpp  LogHTMLContents.h  LogRTF.cpp  LogRTFContents.h  LogTermVT100.cpp  LogTermWindows.cpp
commun/sockets/: Socket.cpp  Socket.h  tcpSock.cpp  tcpSock.h
commun/tga/: TGALoader.cpp  TGALoader.h
elec/Interface_Can/: Application.cpp  Application.h  CMakeLists.txt  CanListener.cpp  CanListener.h  Can_Interface.cpp  Header.h  Message.cpp  Message.h  Message_Buffer.cpp  Message_Buffer.h  Monitor.cpp  Monitor.h  Preset.cpp  Preset.h  Start_Screen.cpp  Start_Screen.h
legacy/robot/Strategy.old/: Ascenseur.cpp  Ascenseur.h  CMakeLists.txt  MecaManager.cpp  README.md  Strategie.h  StrategiePrincipal.cpp
src/Lidar/: CMakeLists.txt  Display.cpp  Display.h  FindRobots.cpp  FindRobots.h  PrintRobots.cpp  affGrille.cpp  affLidar.cpp  affiche.cpp  affiche.h  filtre.cpp  filtre.h  lidarServer.cpp  lidarServer.h  lidarServerFront.cpp  lidarsToGrid.cpp  lidarsToGrid.h  trouverobots.cpp  trouverobots.h
src/Lidar/Driver/: hokuyoLidar.cpp  hokuyoLidar.h  lidar.cpp  lidar.h  sickLidar.cpp  sickLidar.h
src/commun/: .gitignore  ActionResult.h  AsciiArt.hpp  CMakeLists.txt  Clock.h  Color.h  Commun.h  ConstantesCommunes.cpp  ConstantesCommunes.h  Constants.cpp  Constants.h  EmbeddedFiles.cpp  EmbeddedFiles.h  IConstantes.h  Json.h  Outcome.h  ResultatAction.h  Trame.cpp  Trame.h  TrameSimu.cpp  TrameSimu.h  Utils.h  table_2017.json  table_2018.json  table_2019.json  table_2020.json
src/commun/Enum/: .fuse_hidden00002a0200000002  Enum.h  Enum.hpp
src/commun/ID_cartes_elecs/: Informations_cartesElec_2016.h  Informations_cartesElec_2017.h  Informations_cartesElec_2018.h
src/commun/MathToolbox/: MathToolbox.cpp  MathToolbox.h  MathUtilities.cpp  MathUtilities.h  Matrix3.h  Matrix3.hpp  Matrix4.h  Matrix4.hpp  Repere.cpp  Repere.h  Transform.h  Transform.hpp  Vector.h  Vector2.h  Vector2.hpp  Vector3.h  Vector4.h  spline.cpp  spline.h
src/commun/RobotPrincipal/: Constantes.cpp  Constantes.h
src/commun/log/: Log.cpp  Log.h  (+5 more)
src/elec/: CMakeLists.txt
src/robot/: CMakeLists.txt  Primary.cpp  Primary.h  Robot.cpp  Robot.h  archi.txt
src/simulateur/: CMakeLists.txt  PhysicalToSimulationUnits.h  Simulateur.cpp  Simulateur.h  SimulateurConstantes.h  SimulationToWebserver.h  debug_simu  main.cpp
test/: .gitignore  CMakeLists.txt  PetriSample.cpp  PetriSample.h  Sample.petri  TestUtils.cpp  TestUtils.h  TestUtils.hpp  leds.cpp  moving.cpp  servos.cpp  unit-angle.cpp  unit-angular_speed.cpp  unit-com.cpp  unit-communication.cpp  unit-constantes.cpp  unit-constants.cpp  unit-frames.cpp  unit-ini.cpp  unit-interfacers.cpp  unit-led19.cpp  unit-modules.cpp  unit-modules_communication.cpp  unit-modules_elec.cpp  unit-petri.cpp  unit-repere.cpp  unit-robot.cpp  unit-robot_commun.cpp  unit-servos_conversions.cpp  unit-simu_modules.cpp  unit-simulator-state.cpp  unit-strategy.cpp  unit-strategy_generator.cpp  unit.cpp  unit14-simulator-gtk.cpp  unit_simu_modules.cpp
test/RealWorld/: CMakeLists.txt  colorDetection.cpp  io_pumps.cpp  moving.cpp  servos.cpp  testEnv.cpp
(+1158 files in other folders)
